Rediseñado el guardado de la agenda y bajado el JDK target del 23 al 21 para poder construir ejecutables